manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: devops-test-api
  name: devops-test-api
  namespace: devops-test
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: devops-test-api
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  type: ClusterIP
